   - This will cause most of your config files to be reset. Sorry!
  Raised the generation of Titanium Ore back up to where it was in versions 1.3.x.
  Increased Silicon Ore generation. (mainly because a lot of crafting recipes have changed as well.)
  Also adjusted machine values.
  Reduced the volume of the Compressor since it WAS too loud. Also randomized the pitch slightly.
FIXED:
  Fixed Unidentified Chainmail armor dropping as often as Gold armor.
  Optimized Lasers:
    - Doesn't use any TileEntities at all, so there should be much less lag.
    - Lasers stay in-world if you log out and get back in again.
    - Lasers beams continue moving even if the Laser is removed.
  Fixed Laser machines counting adjacent lasers even though they weren't attached
    or the proper laser type.
  Fixed de_de.json language files. Fixed "Lasers" and "Auto Shutoff" not being translated.
    See: https://github.com/ADDSynth/Overpowered-Forge-1.14/commit/5f4418eadb862447e4b58be2b637d0f230d717f4
  Fixed Energy Suspension Bridge maximum length was actually 1 less than what is set
    in the configuration.
  Fix not loading MachineValues config correctly. Yay! Sorry about that!
  Fix the Fusion Energy advancement was never being awarded to players. God Dammit.
REMOVED:
  Before now, you could still edit the config to seperate Tools into their own Creative Tab,
    we've finally removed that.
KNOWN PROBLEMS:
  If you edit the configuration option that changes the Maximum Energy Suspension Bridge
    Length to a lower value, while you have a bridge active in your world, then the
    Energy Suspension Bridge will not recognize it, and won't be able to turn it off.
    The energy bridge will exist as actual indestructable blocks in the world, not controlled
    by the Energy Suspsension Bridge.
    - I will try to fix this as soon as I can!
  Passive Machines (Crystal Matter Generator and Plasma Generator) will continue consuming energy