@@ -15,6 +15,6 @@
   },
   "result": {
     "item": "addsynth_energy:energy_wire",
-    "count": 8
+    "count": 12
   }
 }
