@@ -36,7 +36,7 @@
       "conditions": {
         "items": [
           {
-            "item": "addsynth_energy:circuit_tier_6"
+            "item": "addsynth_energy:circuit_tier_4"
           }
         ]
       }
