@@ -1,18 +1,9 @@
 {
-  "type": "minecraft:crafting_shaped",
-  "pattern": [
-    " b ",
-    "bsb",
-    " b "
+  "type": "minecraft:crafting_shapeless",
+  "ingredients": [
+    {"tag": "forge:plates/steel"},
+    {"item": "overpowered:plasma"}
   ],
-  "key": {
-    "s": {
-      "tag": "forge:plates/steel"
-    },
-    "b": {
-      "item": "overpowered:beam_emitter"
-    }
-  },
   "result": {
     "item": "overpowered:energy_grid"
   }
