@@ -16,7 +16,7 @@
       "item": "overpowered:energy_crystal_shards"
     },
     "p": {
-      "item": "addsynth_energy:circuit_tier_4"
+      "item": "addsynth_energy:circuit_tier_5"
     }
   },
   "result": {
